--- a/assets/CSS/menu.css
+++ b/assets/CSS/menu.css
@@ -85,6 +85,11 @@ nav li:first-child{
     display: none;
 }
 
+.not-active { 
+    pointer-events: none; 
+    cursor: not-allowed; 
+} 
+
 
 @media (max-width: 800px){
     .hideOnMobile{
