--- a/assets/CSS/style_footer.css
+++ b/assets/CSS/style_footer.css
@@ -6,17 +6,18 @@
 /* color de fondo del pie de pagina con un ancho del 100% de esta misma */
 .pie{
     width: 100%;
+
     background-color: #393e46;
 }
   /* columna logo */
 .pie .grupo-1{
     width: 100%;
-    max-width: 1200px;
+    max-width: 1200px; 
     margin: auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 50px;
-    padding: 45px 0px;
+    padding: 0px;
 }
 /* configuracion del logo  */
 .pie .grupo-1 .caja figure{
@@ -56,7 +57,6 @@
 /* derechos reservados */
 .pie .grupo-2 {
     background-color: #0a1a2a;
-    padding: 15px 10px;
     text-align: center;
     color: white;
 }
