--- a/assets/CSS/menu.css
+++ b/assets/CSS/menu.css
@@ -63,10 +63,11 @@ nav li:first-child{
     right: 0;
     height: 100vh;
     width: 250px;
+    color :#eeeeee;
     z-index: 999;
-    background-color: #4759941c;
+    background-color: #ffffff1c;
     backdrop-filter: blur(10px);
-    box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: -10px 0 10px rgba(255, 255, 255, 0.1);
     display: none;
     flex-direction: column;
     align-items: flex-start;
@@ -103,5 +104,6 @@ nav li:first-child{
 @media (max-width: 400px){
     .sidebar{
         width: 100%;
+        color:#eeeeee;
     }
 }
