--- a/assets/CSS/paragraph_index.css
+++ b/assets/CSS/paragraph_index.css
@@ -47,3 +47,10 @@
     box-shadow: 0 2px 4px rgba(214, 7, 7, 0.1); /* Sombra */
     align-items: flex-start;
 }
+
+.contenedor-texto-right-principal {
+    width: 50%;
+    position: top;
+    
+}
+
