--- a/assets/CSS/style_footer.css
+++ b/assets/CSS/style_footer.css
@@ -12,7 +12,7 @@
 /* color de fondo del pie de pagina con un ancho del 100% de esta misma */
 .pie{
     width: 100%;
-    background-color: #393e46;
+    background-color: #3a5a40;
 }
   /* columna logo */
 .pie .grupo-1{
@@ -57,12 +57,12 @@
     line-height: 45px;
     color: rgb(255, 255, 255);
     margin-right: 10px;
-    background-color: #0d2033;
+    background-color: #344e41;
     text-align: center;
 }
 /* derechos reservados */
 .pie .grupo-2 {
-    background-color: #0a1a2a;
+    background-color: #344e41;
     text-align: center;
     color: white;
 }
