--- a/assets/CSS/registro_Style.css
+++ b/assets/CSS/registro_Style.css
@@ -5,7 +5,31 @@
     font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
     font-style: italic; /* Agrega cursiva */
 }
+
 .container .container_box
 {
     text-align: center;
 }
+
+/*.container{
+    width: 500px;
+    background: rgba(115, 163, 26, 0.856);
+    margin: 12% auto;
+    padding: 50px 0;
+    color: #fff;
+    box-shadow:  0 0 20px 2px rgba(0,0,0,0.5);
+    border-radius: 5%;
+    justify-content: center;
+}.container.{
+    align-items: center;
+}
+.container .container_box {
+    display: flex;
+}
+.container .container_box label{
+    padding-left: 30px;
+}
+
+.container .container_box input{
+    justify-content: center;
+}*/
