--- a/assets/CSS/registro_Style.css
+++ b/assets/CSS/registro_Style.css
@@ -27,3 +27,5 @@
         text-align: left; /* Alinea los campos del formulario a la izquierda en pantallas más pequeñas */
     }
 }
+
+/* faltan modificar cositas */
